[tool.poetry]
name = "bencherclient"
version = "0.1.0"
description = ""
authors = ["Leonard Papenmeier <leonard.papenmeier@gmail.com>"]
readme = "README.md"
packages = [
    { include = "bencherclient", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
bencherserver = { git = "https://LeoIV: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@github.com/LeoIV/BencherServer.git", branch = "master" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
