[tool.poetry]
name = "bencherclient"
version = "0.1.0"
description = ""
authors = ["Leonard Papenmeier <leonard.papenmeier@gmail.com>"]
readme = "README.md"
packages = [
    { include = "bencherclient", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
bencherscaffold = "^0.3.1"

[tool.poetry.scripts]
client-start = "bencherclient.client:main"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
